feat: texture rendering, multi-block debug world, launcher fixes
- Fix Bootstrap JAR forward-slash paths (ClassNotFoundException resolved)
- Add 13 data-only blocks via two-tier SimpleBlocks.cs pattern
- Load terrain.png atlas once; extract tiles with ImageCopy/ImageCrop
- Render blocks with DrawModelEx + TextureFilter.Point (pixel-art correct)
- Fix camera FoV-based distance to show all 14 blocks in frame
- Embed logo into launcher profile; brace-depth-safe profile JSON editing
- Add JavaRandom (bit-exact java.util.Random LCG from Java SE spec)
- Add AIR-GAP protocol and clean-room workflow doc